[gd_scene load_steps=5 format=3 uid="uid://ccp474g3icvaf"]

[ext_resource type="Script" path="res://UI/settings.gd" id="1_ie2nd"]
[ext_resource type="Script" path="res://UI/key_remap/change_keys.gd" id="2_860ot"]
[ext_resource type="PackedScene" uid="uid://3n0l7dfggn4" path="res://UI/key_remap/action_container.tscn" id="3_81plc"]
[ext_resource type="Theme" uid="uid://d2luyiqyrk76m" path="res://UI/new_theme.tres" id="4_h3o4b"]

[node name="Settings" type="Control" node_paths=PackedStringArray("music_volume_slider", "sfx_volume_slider")]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ie2nd")
music_volume_slider = NodePath("HSlider")
sfx_volume_slider = NodePath("HSlider2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 230.0
offset_top = 12.0
offset_right = 1732.0
offset_bottom = 1028.0
color = Color(0, 0.388235, 0.388235, 0.921569)

[node name="ButtonLayout" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 271.0
offset_top = -19.0
offset_right = -226.0
offset_bottom = 312.0
grow_horizontal = 2
script = ExtResource("2_860ot")

[node name="Left" parent="ButtonLayout" instance=ExtResource("3_81plc")]
layout_mode = 2
alignment = 2
action = 0

[node name="Jump" parent="ButtonLayout" instance=ExtResource("3_81plc")]
layout_mode = 2
alignment = 2
action = 2

[node name="Right" parent="ButtonLayout" instance=ExtResource("3_81plc")]
layout_mode = 2
alignment = 2

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -72.0
offset_top = -154.0
offset_right = 78.0
offset_bottom = -95.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_h3o4b")
text = "Back"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.5
offset_top = -537.0
offset_right = 183.5
offset_bottom = -446.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 66
text = "CONTROLS:"

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.5
offset_top = -90.0
offset_right = 183.5
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 66
text = "AUDIO:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = 26.0
offset_right = 88.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
max_value = 200.0

[node name="Label" type="Label" parent="HSlider"]
layout_mode = 0
offset_left = -122.0
offset_top = -4.0
offset_right = -13.0
offset_bottom = 19.0
text = "Music Volume"

[node name="HSlider2" type="HSlider" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = 67.0
offset_right = 88.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
max_value = 200.0

[node name="Label" type="Label" parent="HSlider2"]
layout_mode = 0
offset_left = -122.0
offset_top = -4.0
offset_right = -13.0
offset_bottom = 19.0
text = "SFX Volume"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 987.0
offset_top = 152.0
offset_right = 1662.0
offset_bottom = 175.0
text = "press one of these yellow (action buttons) to ADD A KEY the the selected action"

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 270.0
offset_top = 429.0
offset_right = 889.0
offset_bottom = 452.0
text = "press one of these white (input buttons) to REMOVE a key from the action above"

[node name="Intro" type="Button" parent="."]
layout_mode = 0
offset_left = 886.0
offset_top = 794.0
offset_right = 1036.0
offset_bottom = 854.0
theme = ExtResource("4_h3o4b")
text = "Replay Intro"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed_music"]
[connection signal="value_changed" from="HSlider2" to="." method="_on_h_slider_value_changed_sfx"]
[connection signal="pressed" from="Intro" to="." method="_on_intro_pressed"]
